deploy/logs/cloud_trigger.log
nohup: ignoring input
python: can't open file '/data/data/com.termux/files/home/empress/throne/cloud_mutation_trigger.py': [Errno 2] No such file or directory
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/cloud_mutation_trigger.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
